@@ -1,7 +1,9 @@
 Version 0.8
  Put Copyright/GPL notices in all files
  Cosmetic build improvements
- Add idle callback to generators
+ obdsim: Add idle callback to generators
+ obdsim: Messing with serial comms
+ logger: Make newline configurable
 
 Version 0.7 (released 2009-06-25)
  Initial add of new module, obdsim
